<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="me.vkonov.mealcalculator.AboutUs">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/picture_height"
        android:id="@+id/imageView"
        android:src="@drawable/photo"
        android:layout_alignParentTop="true"
        android:cropToPadding="false"
        android:scaleType="fitCenter"
        android:maxHeight="@android:dimen/thumbnail_height"
        android:maxWidth="@android:dimen/thumbnail_width" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/aboutus_lblName"
        android:id="@+id/textView"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="20dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/aboutus_lblMail"
        android:id="@+id/textView2"
        android:layout_below="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_marginTop="20dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/aboutus_lblPhone"
        android:id="@+id/textView3"
        android:layout_below="@+id/textView2"
        android:layout_alignStart="@+id/textView"
        android:layout_marginTop="20dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/aboutus_name"
        android:id="@+id/textView4"
        android:layout_alignBaseline="@+id/textView"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/aboutus_mail"
        android:id="@+id/textView5"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignEnd="@id/textView4" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/aboutus_phone"
        android:id="@+id/textView6"
        android:layout_alignBaseline="@+id/textView3"
        android:layout_alignEnd="@id/textView5" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aboutus_lblBack"
        android:id="@+id/button"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="30dp" />


</RelativeLayout>
